--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
                 </div>
               </div>
               <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="callout-btn-box"></div>
               </div>
             </div>
           </div>
