--- a/index.html
+++ b/index.html
@@ -370,11 +370,10 @@
               <div class="col-sm-6 col-md-8 col-lg-9">
                 <div class="callout-text font-alt">
                   <h4 style="margin-top: 0px;">Start Creating Beautiful Websites</h4>
-                  <p style="margin-bottom: 0px;">Download Titan Free today!</p>
                 </div>
               </div>
               <div class="col-sm-6 col-md-4 col-lg-3">
-                <div class="callout-btn-box"><a class="btn btn-border-w btn-circle" href="https://themewagon.com/themes/titan/">Downlaod Free</a></div>
+                <div class="callout-btn-box"></div>
               </div>
             </div>
           </div>
