Change questions email link

--- a/documentation.html
+++ b/documentation.html
@@ -417,7 +417,7 @@ $listID = 'fd1b8b****';</pre>
                   <li><a href="http://dimsemenov.com/plugins/magnific-popup/">Magnific-popup</a> - Modal window, gallery, modal video</li>
                   <li><a href="https://github.com/pupunzi/jquery.mb.YTPlayer">Video background</a> - Header video background or any section with video</li>
                 </ul>
-                <p>If you have any questions please feel free to email<a href="mailto:info@themewagon.com">&nbsp; here</a></p>
+                <p>If you have any questions please feel free to email<a href="mailto:rivett.ethan@gmail.com">&nbsp; here</a></p>
               </div>
             </div>
           </div>
